--- a/srhth65.html
+++ b/srhth65.html
@@ -24,7 +24,10 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #6</a></td>
+    <td>
+	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Link to Homework #6</a> <br />
+	<a href="https://clean-doodad-339402.wl.r.appspot.com/query?query=TSLA"> Sample Cloud Search with TSLA </a>
+    </td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
