--- a/srhth65.html
+++ b/srhth65.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0049)https://csci571.com/hw/hw2/ScrambleThisTable.html -->
+<!-- saved from url=(0099)file:///C:/Users/srihi/Desktop/USC/Sem%202/Web%20Tech/Github/SrihithaReddy13.github.io/srhth65.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <style>
 table, th, td {
@@ -25,13 +25,13 @@ th, td {
   <tr>
     <td>Link to Homework #5</td>
     <td>
-	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Link to Homework #6</a> <br />
+	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Link to Homework #6</a> <br>
 	<a href="https://clean-doodad-339402.wl.r.appspot.com/query?query=TSLA"> Sample Cloud Search with TSLA </a>
     </td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #8</a></td>
+    <td><a href="https://cool-snowfall-345818.wl.r.appspot.com/">Link to Homework #8</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
