--- a/srhth65.html
+++ b/srhth65.html
@@ -31,7 +31,7 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href="https://cool-snowfall-345818.wl.r.appspot.com/">Link to Homework #8</a></td>
+    <td><a href="https://rising-study-345820.wl.r.appspot.com/">Link to Homework #8</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
