--- a/srhth65.html
+++ b/srhth65.html
@@ -31,7 +31,11 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href="https://rising-study-345820.wl.r.appspot.com/">Link to Homework #8</a></td>
+    <td>
+	<a href="https://peerless-voyage-345901.wl.r.appspot.com/">Link to Homework #8</a> <br>
+	<a href="https://peerless-voyage-345901.wl.r.appspot.com/api/getCompanyData/?ticker=AAPL"> Sample Cloud Search with TSLA</a>
+    </td>
+        
   </tr>
   <tr>
     <td>Link to Homework #9</td>
