--- a/srhth65.html
+++ b/srhth65.html
@@ -38,7 +38,9 @@ th, td {
         
   </tr>
   <tr>
-    <td>Link to Homework #9</td>
+    <td>
+	<a href="https://shaped-ship-349219.wl.r.appspot.com/api/getStockPriceData/?ticker=AAPL"> Sample Cloud Search with AAPL</a>
+    </td>
     <td>Link to Homework #10</td>
   </tr>
   </tbody></table>
