--- a/srhth65.html
+++ b/srhth65.html
@@ -19,26 +19,27 @@ th, td {
     <td>Link to Homework #2</td>
   </tr>
   <tr>
-    <td><a href="https://srihithareddy13.github.io/CSCI571_HW3/mypage.html">Link to Homework #3</a></td>
+    <td><a href="https://srihithareddy13.github.io/CSCI571_HW3/mypage.html">Simple HTML & CSS page</a></td>
     <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #4</a></td>
   </tr>
   <tr>
     <td>Link to Homework #5</td>
     <td>
-	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Link to Homework #6</a> <br>
+	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Stock search website using Server-side Scripting using Python Flask, JSON</a> <br>
 	<a href="https://clean-doodad-339402.wl.r.appspot.com/query?query=TSLA"> Sample Cloud Search with TSLA </a>
     </td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
     <td>
-	<a href="https://peerless-voyage-345901.wl.r.appspot.com/">Link to Homework #8</a> <br>
+	<a href="https://peerless-voyage-345901.wl.r.appspot.com/">Stock search website using Ajax, JSON, Responsive Design and Node.js</a> <br>
 	<a href="https://peerless-voyage-345901.wl.r.appspot.com/api/getCompanyData/?ticker=AAPL"> Sample Cloud Search with TSLA</a>
     </td>
         
   </tr>
   <tr>
     <td>
+	<a href="https://www.youtube.com/watch?v=jZJQWOgIj-s">Video of Stock Trading App (Android)</a> <br>
 	<a href="https://shaped-ship-349219.wl.r.appspot.com/api/getStockPriceData/?ticker=AAPL"> Sample Cloud Search with AAPL</a>
     </td>
     <td>Link to Homework #10</td>
