--- a/srhth65.html
+++ b/srhth65.html
@@ -15,22 +15,21 @@ th, td {
 
 <table style="width:60%" align="center">
   <tbody><tr>
-    <td>Link to Homework #1 </td>
-    <td>Link to Homework #2</td>
+    <td>Machine learning projects</td>
+    <td>Artificial Intelligence projects</td>
   </tr>
   <tr>
     <td><a href="https://srihithareddy13.github.io/CSCI571_HW3/mypage.html">Simple HTML & CSS page</a></td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #4</a></td>
   </tr>
   <tr>
-    <td>Link to Homework #5</td>
+    <td>Natural Language Processing projects</td>
     <td>
 	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Stock search website using Server-side Scripting using Python Flask, JSON</a> <br>
 	<a href="https://clean-doodad-339402.wl.r.appspot.com/query?query=TSLA"> Sample Cloud Search with TSLA </a>
     </td>
   </tr>
   <tr>
-    <td>Link to Homework #7</td>
+    <td>---</td>
     <td>
 	<a href="https://peerless-voyage-345901.wl.r.appspot.com/">Stock search website using Ajax, JSON, Responsive Design and Node.js</a> <br>
 	<a href="https://peerless-voyage-345901.wl.r.appspot.com/api/getCompanyData/?ticker=AAPL"> Sample Cloud Search with TSLA</a>
@@ -42,7 +41,7 @@ th, td {
 	<a href="https://www.youtube.com/watch?v=jZJQWOgIj-s">Video of Stock Trading App (Android)</a> <br>
 	<a href="https://shaped-ship-349219.wl.r.appspot.com/api/getStockPriceData/?ticker=AAPL"> Sample Cloud Search with AAPL</a>
     </td>
-    <td>Link to Homework #10</td>
+    <td>---</td>
   </tr>
   </tbody></table>
 
