--- a/srhth65.html
+++ b/srhth65.html
@@ -24,14 +24,14 @@ th, td {
   <tr>
     <td>Natural Language Processing projects</td>
     <td>
-	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Stock search website using Server-side Scripting using Python Flask, JSON</a> <br>
+	<a href="https://clean-doodad-339402.wl.r.appspot.com/">Stock search website - Server-side Scripting using Python Flask, JSON</a> <br>
 	<a href="https://clean-doodad-339402.wl.r.appspot.com/query?query=TSLA"> Sample Cloud Search with TSLA </a>
     </td>
   </tr>
   <tr>
     <td>---</td>
     <td>
-	<a href="https://peerless-voyage-345901.wl.r.appspot.com/">Stock search website using Ajax, JSON, Responsive Design and Node.js</a> <br>
+	<a href="https://peerless-voyage-345901.wl.r.appspot.com/">Stock search website - Ajax, JSON, Responsive Design and Node.js</a> <br>
 	<a href="https://peerless-voyage-345901.wl.r.appspot.com/api/getCompanyData/?ticker=AAPL"> Sample Cloud Search with TSLA</a>
     </td>
         
